# NDK_OpenGLES_3_0

./: .gitignore  BasicLight.glsl  MultiLights.glsl  README.md  build.gradle  gradle.properties  temp.glsl
app/: build.gradle
app/src/androidTest/java/com/byteflow/app/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: YUV_Image_840x1074.NV21  lye_1280x800.Gray
app/src/main/cpp/: CMakeLists.txt  JniImpl.cpp
app/src/main/cpp/egl/: EglCore.cpp  EglCore.h  EglSurfaceBase.cpp  EglSurfaceBase.h  OffscreenSurface.cpp  OffscreenSurface.h  WindowSurface.cpp  WindowSurface.h
app/src/main/cpp/inc/assimp/: config.h
app/src/main/cpp/inc/freetype_2_9_1/: ft2build.h
app/src/main/cpp/looper/: GLRenderLooper.cpp  GLRenderLooper.h  Looper.cpp  Looper.h
app/src/main/cpp/model/: mesh.h  model.h  shader.h
app/src/main/cpp/opencv_3_0_0/opencv2/: cvconfig.h
app/src/main/cpp/render/: BgRender.cpp  BgRender.h  EGLRender.cpp  EGLRender.h  MyGLRenderContext.cpp  MyGLRenderContext.h
app/src/main/cpp/sample/: AvatarSample.cpp  AvatarSample.h  BasicLightingSample.cpp  BasicLightingSample.h  BeatingHeartSample.cpp  BeatingHeartSample.h  BezierCurveSample.cpp  BezierCurveSample.h  BigEyesSample.cpp  BigEyesSample.h  BigHeadSample.cpp  BigHeadSample.h  BinaryProgramExample.cpp  BinaryProgramExample.h  BlendingSample.cpp  BlendingSample.h  BlitFrameBufferExample.cpp  BlitFrameBufferExample.h  CloudSample.cpp  CloudSample.h  ComputeShaderSample.cpp  ComputeShaderSample.h  ConveyorBeltExample.cpp  ConveyorBeltExample.h  CoordSystemSample.cpp  CoordSystemSample.h  CopyTextureExample.cpp  CopyTextureExample.h  DepthTestingSample.cpp  DepthTestingSample.h  FBOBlitSample.cpp  FBOBlitSample.h  FBOLegLengthenSample.cpp  FBOLegLengthenSample.h  FBOSample.cpp  FBOSample.h  FaceSlenderSample.cpp  FaceSlenderSample.h  FullScreenTriangleSample.cpp  FullScreenTriangleSample.h  (+93 more)
app/src/main/cpp/util/: ByteFlowLock.h  CommonDef.h  GLUtils.cpp  GLUtils.h  ImageDef.h  LogUtil.h
app/src/main/java/com/byteflow/app/: CommonUtils.java  MainActivity.java  MyGLRender.java  MyGLSurfaceView.java  MyNativeRender.java
app/src/main/java/com/byteflow/app/adapter/: MyRecyclerViewAdapter.java
app/src/main/java/com/byteflow/app/audio/: AudioCollector.java  AudioRecorderWrapper.java
app/src/main/java/com/byteflow/app/egl/: EGLActivity.java  NativeBgRender.java  NativeEglRender.java
app/src/main/res/layout/: activity_egl.xml  activity_main.xml  sample_item_layout.xml  sample_selected_layout.xml
app/src/main/res/menu/: menu_egl.xml  menu_main.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/byteflow/app/: ExampleUnitTest.java
doc/img/4/: Girl.From.Nowhere.S01.THAI.720p.NF.WEBRip.DDP2.0.x264-INFLATE[btbtt.me].torrent
doc/md/: NDK OpenGLES3.0 开发（一）：绘制一个三角形.md  NDK OpenGLES3.0 开发（三）：YUV 渲染.md  NDK OpenGLES3.0 开发（二）：纹理映射.md  NDK OpenGLES3.0 开发（五）：FBO 离屏渲染.md  NDK OpenGLES3.0 开发（四）：VBO、EBO 和 VAO.md
gradle/wrapper/: gradle-wrapper.properties
model/bird/: 12214_Bird_v1max_l3.mtl
model/earth/: earth.3DS  earth.max  earth.mtl
model/girl/: 091_W_Aya_100K.mtl  091_W_Aya_10K.mtl  091_W_Aya_30K.mtl
model/new/: camaro.mtl
model/poly/: Apricot_02_hi_poly.mtl
model/tank/: Abrams_BF3.lxo  Abrams_BF3.mtl
